objects/ASI_CRM_IOTLine__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_FOCQuantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>FOC Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_IOTHeader__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>IOT Header</label>
        <referenceTo>ASI_CRM_IOTHeader__c</referenceTo>
        <relationshipName>IOT_Lines</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Quantity__c</fullName>
        <label>Quantity in bottle</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SKU__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>SKU</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_MFM_SKU_Code__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>MY CRM SKU, ASI CRM SG SO MY</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_SKU_Code__c</referenceTo>
        <relationshipName>IOT_Lines</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SubBrand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipName>IOT_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Indirect Order Taking Line</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IL-{00000000}</displayFormat>
        <label>IOT Line ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Indirect Order Taking Lines</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_MY_IOTLine</fullName>
        <active>true</active>
        <label>ASI CRM MY IOTLine</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>